add random coloring and consistent sizes

--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
 
     <div class="container-fluid">
 
-    <!--   <div id="start" class="row">
-        New Order
-      </div> -->
 
       <div id="meal" class="row">
 
-        <div class="item col-xs-6">Chubby Chicken</div>
+        <div class="item col-xs-6">Chubby</div>
 
-        <div class="item col-xs-6">Teen Burger</div>
+        <div class="item col-xs-6">Teen</div>
 
-        <div class="item col-xs-6">Papa Burger</div>
+        <div class="item col-xs-6">Papa</div>
 
-        <div class="item col-xs-6">Chicken Strips</div>
+        <div class="item col-xs-6">Strips</div>
 
       </div>
 
@@ -42,7 +39,7 @@
 
         <div class="item col-xs-6">Onion Rings</div>
 
-        <div class="item col-xs-6">Sweet Potato Fries</div>
+        <div class="item col-xs-6">Sweet Fries</div>
 
         <div class="item col-xs-6">Poutine</div>
 
