added emojis in place of words

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div id="drink" class="row">
 
-        <div class="item col-xs-6">Root Beet</div>
+        <div class="item col-xs-6">Root Beer</div>
 
         <div class="item col-xs-6">Coke</div>
 
