improve styling and markup

--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
 
       </div>
 
-      <div id="results" class="row">
-        <div class="col-xs-12">
-          <h1>Totals:</h1>
+      <div class="row">
+        <div id="results" class="col-xs-12">
+          <span id="ok">&#x1F44C</span>
+          <ul></ul>
         </div>
-        <div id="x">&#x1F44C</div>
-        <div id="output" class="col-xs-12"></div>
       </div>
 
 
